<resources>
    <string name="app_name">Destiny</string>
    <string name="welcome_des">Welcome To Culttrip Client This Application Powered By Vortex-io to show the culture activity with Million Feature Click Continue to Start Using The Application</string>
    <string name="continue_button">Continue</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="login">Login</string>
    <string name="dont_have_account_register">Dont have Account ? Register</string>
    <string name="email_required">Email Required</string>
    <string name="pass_required">Password Required</string>
    <string name="name">Full Name</string>
    <string name="number">Phone Number</string>
    <string name="locaiton">Location Name</string>
    <string name="register">Register</string>
    <string name="name_required">Full Name Required</string>
    <string name="phone_required">Phone Number Required</string>
    <string name="location_required">Location Name Required</string>
    <string name="register_completed">Register Completed</string>
    <string name="collections">Collections</string>
    <string name="recommendations">Explore By Categories</string>
    <string name="home">Home</string>
    <string name="fav">Fav</string>
    <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="featured">FEATURED</string>
    <string name="recommend">RECOMMENDED</string>
    <string name="arts_culture"><![CDATA[Arts & Culture]]></string>
    <string name="categories">Categories</string>
    <string name="popular_routs">Popular Routs</string>
    <string name="places">Places</string>
    <string name="red">Recommended</string>
    <string name="popular">Popular Recipes</string>
    <string name="promoted">Promoted Recipes</string>
    <string name="add_item">Add Item To Cart</string>
    <string name="comments">View Comments</string>
    <string name="recipe_success">Item Saved in Cart</string>
    <string name="send">Send</string>
    <string name="enter_comment">Enter Comment</string>
    <string name="def" />
    <string name="cart">Cart</string>
    <string name="cart_empty">Empty Cart, Please Add Some Items</string>
    <string name="my_cart">My Cart</string>
    <string name="checkout">checkout</string>
    <string name="not_allowed">Vortex Testing (Demo Application)</string>
    <string name="channel_notifications">Offers</string>
    <string name="login_with_your_existing_account">Login With Your Existing Account</string>
</resources>